# YouTube

./: README.md
Documents/: IOS-Keyboard-project-idea.md  ios-keyboard-fsd.md
ios-keyboard/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32s3
ios-keyboard/components/dns_server/: CMakeLists.txt  dns_server.c
ios-keyboard/components/dns_server/include/: dns_server.h
ios-keyboard/docs/: iOS-Keyboard-FSD.md
ios-keyboard/main/: CMakeLists.txt  app_main.c  ble_nus.c  ble_nus.h  hid_keyboard.c  hid_keyboard.h  http_server.c  http_server.h  idf_component.yml  layout_manager.c  layout_manager.h  nvs_store.c  nvs_store.h  ota_update.c  ota_update.h  portal.html  text_engine.c  text_engine.h  udp_log.c  udp_log.h  watchdog.c  watchdog.h  wifi_prov.c  wifi_prov.h
